# deepin-graphics-driver-manager

./: .clog.toml  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  README.zh_CN.md  com.deepin.daemon.GraphicsDriver.xml  com.deepin.dgradvrmgr-installer.policy  com.deepin.dgradvrmgr.policy  deepin-graphics-driver-manager-waraper  deepin-graphics-driver-manager.desktop  design.md  graphicsdeviceinfo.cpp  graphicsdeviceinfo.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  translate_ts2desktop.sh  utils.h
.reuse/: dep5
.tx/: config  ts2desktop
DOC/: 显卡驱动管理器1040需求文档.docx  显卡驱动管理器sp4需求开发计划.xlsx  显卡驱动需求拆解.xlsx
config/resolutions/: resolutions.json
debian/: README.Debian  README.source  changelog  control  copyright  deepin-graphics-driver-manager.1  deepin-graphics-driver-manager.manpages  deepin-graphics-driver-manager.postinst  postinst  rules
dmanual/en_US/: index.md
dmanual/zh_CN/: index.md
gltest/: CMakeLists.txt  gltestwidget.cpp  gltestwidget.h  gltestwindow.cpp  gltestwindow.h  main.cpp
installer/: CMakeLists.txt  deepin-gradvrmgr-installer.desktop  installer-waraper  main.cpp  resources.qrc
notify/: CMakeLists.txt  deepin-gradvrmgr-notify.desktop  main.cpp
prepare/: CMakeLists.txt  device.h  main.cpp  mainwindow.cpp  mainwindow.h  resolution.h  resolutionwidget.cpp  resolutionwidget.h  resources.qrc  singleresolutionwidget.cpp  singleresolutionwidget.h
prepare/resources/test/: amd.json  intel.json  intel_nvidia.json  intel_nvidia_use_intel.json  intel_nvidia_use_nvidia.json  nvidia.json
prepare/translations/: deepin-graphics-driver-manager_bg.ts  deepin-graphics-driver-manager_id.ts  deepin-graphics-driver-manager_ko.ts  deepin-graphics-driver-manager_ms.ts  deepin-graphics-driver-manager_ne.ts  deepin-graphics-driver-manager_tr.ts
prepare/translations/desktop/: desktop_ru.ts  desktop_sq.ts  desktop_zh_CN.ts  desktop_zh_TW.ts
resolutions/: resolution.cpp  resolution.h  resolutioninterface.h  resolutions.cpp  resolutions.h
resources/service/: driver-installer.service
scripts/: common.sh  dgradvrmgr-post.sh  dgradvrmgr-prepare.sh  dgradvrmgr-reboot.sh  dgradvrmgr.sh  error_func.sh  gltest-set-success.sh  install_nouveau.sh  install_nvidia_closesource.sh  install_nvidia_intel_closesource.sh  nvidia_driver_install.sh  prepare_nvidia_intel_closesource.sh  status_nouveau.sh  status_nvidia_intel.sh  status_nvidia_intel_opensource.sh  test_battery.sh
scripts/intel/: install_glamor.sh  install_intel_opensource.sh  install_sna.sh  install_uxa.sh  intel_stat.sh  prepare_intel_opensource.sh  remove_glamor.sh  remove_intel_opensource.sh  remove_uxa.sh
server/: CMakeLists.txt  LogManager.cpp  LogManager.h  graphicsdeviceinfo.cpp  graphicsdeviceinfo.h  graphicsdriveradaptor.cpp  graphicsdriveradaptor.h  graphicsdriverinterface.cpp  graphicsdriverinterface.h  main.cpp  resolution.cpp  resolution.h  resolutions.cpp  resolutions.h
server/data/: com.deepin.graphicmanger.conf  com.deepin.graphicmanger.service  com.deepin.graphicsdriver.conf  com.deepin.graphicsdriver.service  deepin-overlay  zzz-overlay
server/resources/config/resolutions/: resolutions.json
server/resources/service/: dgradvrmgr-gltest.service  dgradvrmgr-test-installer.service
server/scripts/: common.sh  control_driver.sh  dgradvrmgr-cancel.sh  dgradvrmgr-gltest.sh  dgradvrmgr-install.sh  dgradvrmgr-prepare.sh  dgradvrmgr-real-install.sh  dgradvrmgr-test-install.sh  dgradvrmgr.sh  gltest-set-success.sh
server/scripts/intel/: install_glamor.sh  install_intel_opensource.sh  intel_stat.sh  prepare_intel_opensource.sh  remove_glamor.sh  remove_intel_opensource.sh  remove_sna.sh  remove_uxa.sh
server/scripts/nvidia/: install_nouveau.sh  install_nvidia_closesource.sh  prepare_nouveau_opensource.sh  prepare_nvidia_closesource.sh  remove_glamor.sh  remove_nouveau.sh  remove_nvidia_closesource.sh  status_nvidia.sh
server/scripts/nvidia_intel/: install_nouveau_intel.sh  install_nvidia_intel_bumblebee.sh  install_nvidia_intel_prime.sh  prepare_nouveau_intel.sh  prepare_nvidia_intel.sh  prepare_nvidia_intel_bumblebee.sh  prepare_nvidia_intel_prime.sh  remove_nvidia_intel.sh  remove_nvidia_intel_bumblebee.sh  remove_nvidia_intel_prime.sh  status_nvidia_intel.sh  version_nvidia_prime.sh
server/scripts/tools/: overlayroot-test.sh
test_installer/: CMakeLists.txt  closeButton.cpp  closeButton.h  deepin-gradvrmgr-test-installer.desktop  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
test_installer/resources/test/: device.json  intel_nvidia.json  nvidia.json
test_installer/resources/theme/dark/: dark.qss
tests/: test.cpp
translations/: deepin-dgradrimgr-gltest.ts  deepin-dgradrimgr-gltest_am_ET.ts  deepin-dgradrimgr-gltest_ar.ts  deepin-dgradrimgr-gltest_ast.ts  deepin-dgradrimgr-gltest_az.ts  deepin-dgradrimgr-gltest_bg.ts  deepin-dgradrimgr-gltest_ca.ts  deepin-dgradrimgr-gltest_cs.ts  deepin-dgradrimgr-gltest_da.ts  deepin-dgradrimgr-gltest_de.ts  deepin-dgradrimgr-gltest_es.ts  deepin-dgradrimgr-gltest_es_419.ts  deepin-dgradrimgr-gltest_fa.ts  deepin-dgradrimgr-gltest_fr.ts  deepin-dgradrimgr-gltest_hr.ts  deepin-dgradrimgr-gltest_hu.ts  deepin-dgradrimgr-gltest_it.ts  deepin-dgradrimgr-gltest_lt.ts  deepin-dgradrimgr-gltest_ms.ts  deepin-dgradrimgr-gltest_nl.ts  deepin-dgradrimgr-gltest_pl.ts  deepin-dgradrimgr-gltest_pt.ts  deepin-dgradrimgr-gltest_pt_BR.ts  deepin-dgradrimgr-gltest_ro.ts  deepin-dgradrimgr-gltest_ru.ts  deepin-dgradrimgr-gltest_sk.ts  deepin-dgradrimgr-gltest_sl.ts  deepin-dgradrimgr-gltest_sr.ts  deepin-dgradrimgr-gltest_tr.ts  deepin-dgradrimgr-gltest_uk.ts  deepin-dgradrimgr-gltest_zh_CN.ts  deepin-dgradrimgr-gltest_zh_TW.ts  deepin-dgradrimgr-notify.ts  deepin-dgradrimgr-notify_am_ET.ts  deepin-dgradrimgr-notify_ar.ts  deepin-dgradrimgr-notify_ast.ts  deepin-dgradrimgr-notify_bg.ts  deepin-dgradrimgr-notify_ca.ts  deepin-dgradrimgr-notify_cs.ts  deepin-dgradrimgr-notify_da.ts  (+66 more)
utils/: environments.h  graphicsdriverproxy.cpp  graphicsdriverproxy.h  utils.cpp  utils.h
widgets/: resolutionwidget.cpp  resolutionwidget.h
(+74 files in other folders)
